fix(pagination): L3-4096 buttons were too small

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -29,6 +29,7 @@ select {
   font: inherit;
 }
 
+blockquote,
 p,
 h1,
 h2,
